# rustler_examples

./: README.md
genserver_callbacks/: .gitignore  README.md  mix.exs
genserver_callbacks/lib/: genserver_callbacks.ex
genserver_callbacks/lib/genserver_callbacks/: native.ex
genserver_callbacks/native/genservercallbacks_native/: Cargo.toml  README.md
genserver_callbacks/native/genservercallbacks_native/src/: atoms.rs  lib.rs  state.rs
genserver_callbacks/test/: genserver_callbacks_test.exs
resources/: README.md  mix.exs
resources/lib/: resources.ex
resources/lib/resources/: nif.ex
resources/native/resources_nif/: Cargo.toml  README.md
resources/native/resources_nif/src/: lib.rs  state.rs
resources/test/: resources_test.exs
